<resources>
    <!-- fragment_login.xml -->
    <string name="app_name">Course Project</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="show">Show</string>

    <!-- fragment_sign_up.xml -->
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="dd_mm_yyyy">dd.mm.yyyy</string>
    <string name="home_town">Home town</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>

    <!-- fragment_meal_entry.xml -->
    <string name="timing">Timing</string>
    <string name="grams">Grams</string>
    <string name="pieces">Pcs</string>
    <string name="pork">Pork and poultry</string>
    <string name="beef">Beef</string>
    <string name="fish">Fish</string>
    <string name="dairy">Dairy</string>
    <string name="cheese">Cheese</string>
    <string name="eggs">Eggs</string>
    <string name="rice">Rice</string>
    <string name="winterSalad">Vegetables (Green house)</string>

    <!-- fragment_biometrics_entry.xml -->
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="kilograms">Kilograms</string>
    <string name="centimeters">Centimeters</string>

    <!-- FragmentController class -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile //this can be changed</string>
    <string name="ConsumptionEntry">Enter Consumption</string>
    <string name="consumption_log">Consumption Log</string>
    <string name="biometrics_log">Biometrics Log</string>
    <string name="update_biometrics">Update Biometrics</string>
</resources>
